# Claude

./: .gitignore  CMakeLists.txt  README.md  毕业设计开题报告.md  需求.txt
.cursor/plans/: 毕设功能缺口盘点.md
.cursor/skills/cct-cn-thesis/: SKILL.md
component-templates/: README.txt
component-templates/agents/: architect.md  backend-api.md  frontend-expert.md  tester.md
component-templates/skills/: cct-workspace-output.md  think-chain-codegen.md  token-budget-hint.md
config/: config.example.json
data/: users.jsonl
data/users/1/: analytics_events.jsonl  llm_usage.json
data/users/1/chats/: threads.txt
data/users/1/components/agents/: 姣曡瀵煎笀.md
data/users/1/components/skills/: 璁烘枃鏍煎紡.md
docs/: billing-api.md  git-sync-api.md  project-file-index.md
git-worker/: index.js  package-lock.json  package.json
ide-app/: README.md  index.html  package-lock.json  package.json  vite.config.js
ide-app/src/: main.js
repo-sync-app/: package-lock.json  package.json  vite.config.js
repo-sync-app/src/: main.js
scripts/sql/: schema.sql  schema_incremental_userbilling.sql
src/: main.cpp
src/context/: scanner.cpp  scanner.hpp
src/generator/: writer.cpp  writer.hpp
src/llm/: anthropic_client.cpp  api.hpp  mock_client.cpp  zhipu_client.cpp
src/storage/: file_chat_store.cpp  file_chat_store.hpp  file_component_store.cpp  file_component_store.hpp  file_token_billing.cpp  file_token_billing.hpp  file_user_persistence.hpp  sql_bundle.cpp  sql_bundle_exports.hpp  storage_helpers.hpp  storage_iface.hpp  token_billing_common.hpp
src/template/: loader.cpp  loader.hpp
src/util/: component_name_utf8.cpp  component_name_utf8.hpp  config.cpp  config.hpp  json_minimal.cpp  json_minimal.hpp  paths.cpp  paths.hpp  utf8_string.hpp
src/web/: crypto.cpp  crypto.hpp  git_worker_client.cpp  git_worker_client.hpp  http_util.cpp  http_util.hpp  server.cpp  server.hpp  user_store.cpp  user_store.hpp
templates/zh/: architect.md
ui/: app.html  index.html  jsconfig.json  login.html  register.html
ui/css/: analytics.css  chat.css  ide.css  repo-sync.css  style.css
ui/ide/: ide.js
ui/js/: analytics.js  app.js  auth.js  chat-project.js  chat-session.js  chat.js  code-scan.js  components.js  landing.js  model-picker.js
ui/js/billing/: billing-modals.js
ui/js/repo-sync/: repo-sync-main.js
ui/repo-sync/: repo-sync-monaco.js  style.css
